[gd_scene load_steps=10 format=3 uid="uid://bge5pfu145lxq"]

[ext_resource type="Script" path="res://assets/UI/dialogueWindow.gd" id="1_r7y03"]
[ext_resource type="Texture2D" uid="uid://gvll4c8h56h1" path="res://assets/UI/DialogueBackground.png" id="2_r7lp4"]
[ext_resource type="Script" path="res://assets/UI/RichTextTesting.gd" id="3_fwmlv"]

[sub_resource type="RichTextEffect" id="RichTextEffect_1kp1h"]
script = ExtResource("3_fwmlv")

[sub_resource type="Animation" id="Animation_41oli"]
resource_name = "ContinueDialogue"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../DialogueBox/DialogueText:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_vg170"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../DialogueBox:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(350, 80)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../DialogueBox/DialogueText:visible_ratio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../DialogueBox/DialogueText:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../../DialogueBox:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_swb75"]
resource_name = "RemoveWindow"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../DialogueBox:size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.266666, 0.766666),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(350, 80), Vector2(20, 80)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333334, 0.266666),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../DialogueBox/DialogueText:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0333334, 0.266666),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../DialogueBox:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.733333, 0.766667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}

[sub_resource type="Animation" id="Animation_3ky4f"]
resource_name = "SpawnWindow"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../DialogueBox:size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(20, 80), Vector2(350, 80)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../DialogueBox/DialogueText:visible_ratio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../DialogueBox/DialogueText:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../../DialogueBox:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gn4vs"]
_data = {
"ContinueDialogue": SubResource("Animation_41oli"),
"RESET": SubResource("Animation_vg170"),
"RemoveWindow": SubResource("Animation_swb75"),
"SpawnWindow": SubResource("Animation_3ky4f")
}

[node name="DialogueWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r7y03")

[node name="DialogueBox" type="NinePatchRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -175.0
offset_top = -94.0
offset_right = 175.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(175, 0)
texture = ExtResource("2_r7lp4")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
metadata/_edit_vertical_guides_ = [576.0]

[node name="DialogueText" type="RichTextLabel" parent="DialogueBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 14.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
text = "Lorem ipsum dolor sit amet, [rainbow]consectetur[/rainbow] adipiscing elit, sed do [wave]eiusmod[/wave] tempor [matrix clean=2.0 dirty=1.0 span=50]incididunt[/matrix] ut labore et dolore [shake]magna[/shake] aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. "
custom_effects = [SubResource("RichTextEffect_1kp1h")]
visible_characters = 0
visible_ratio = 0.0

[node name="NameBox" type="NinePatchRect" parent="."]
modulate = Color(1, 1, 1, 0)
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -161.0
offset_top = -106.0
offset_right = -81.0
offset_bottom = -81.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("2_r7lp4")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
metadata/_edit_vertical_guides_ = [576.0]

[node name="NameText" type="RichTextLabel" parent="NameBox"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -9.5
offset_right = 51.0
offset_bottom = 10.5
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 14
text = "NAMEaaaaaaa"
fit_content = true
scroll_active = false
autowrap_mode = 0
text_direction = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../NameBox/NameText")
libraries = {
"": SubResource("AnimationLibrary_gn4vs")
}
